public route-tables.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-route-table"
  }
}

resource "aws_route_table_association" "lb_1" {
  subnet_id      = aws_subnet.lb_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "lb_2" {
  subnet_id      = aws_subnet.lb_2.id
  route_table_id = aws_route_table.public.id
}
